1.19-6.0.2:
- Fixed a problem where rubble wouldn't be the correct block in case a building has an overridden palette

1.19-6.0.1:
- Fixed a concurrency issue with random source from the world

1.19-6.0.0:
- Port to 1.19!
- 'exportpart' now expects a filename where it will export the part and optional palette
- New 'listparts' to list all parts in the current chunk. Only works in edit mode
- New 'locatepart' to find a named part

1.18-5.3.4:
- It's now possible to toggle between different worldstyles in the Lost Cities world creation screen

1.18-5.3.3:
- Multibuildings can now be any size with a maximum of 3x3. So 1x2, 2x3, 2x2, ...
- New type of 'scattered' buildings. These are 1x1 or multi buildings that will generate randomly outside cities
- Cleaned up the palettes and got rid of all legacy names and blockstates using metadata. These are no longer supported. Use the <modid>:<blockid>[<properties>...] format instead
- Slightly optimized/cleaned up palette code and also fixed a bug where overriding palette entries would not get rid of the original palette data
- Bugfixes on multibuilding scattered features
- Worked on the oilrig
- Small optimization avoid object creation for too many randoms
- Fixed a bug where creating multiple customized profiles from the same MC instance might not work correctly
- New option during world creation to enable edit mode. This allows usage of the new /lostcities editpart command
- Expanded the oilrig

1.18-5.3.2:
- More diagnostics to check a problem with pregenerating chunks

1.18-5.3.1:
- Now the registry system properly supports namespaces. Default namespace is 'lostcities'

1.18-5.3.0:
- Various improvements to the configuration GUI. The preview is now larger too
- Removed several config options that no longer work or are no longer relevant
- Cleaned up a lot of code
- The spawn configuration options are back
- Added forceSpawnInBuilding to force the spawn inside a building (might fail if there is no building near spawn)